[gd_scene load_steps=11 format=3 uid="uid://clhwq8awa5cni"]

[ext_resource type="Texture2D" uid="uid://cosla1adtfgxr" path="res://assets/fighter.png" id="1_546ki"]
[ext_resource type="Script" path="res://entities/fighter.gd" id="1_um4s1"]
[ext_resource type="Script" path="res://entities/area_2d_2_for_attack.gd" id="3_0c1hw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wwatc"]
atlas = ExtResource("1_546ki")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh4q5"]
atlas = ExtResource("1_546ki")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_boegq"]
atlas = ExtResource("1_546ki")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a75ea"]
atlas = ExtResource("1_546ki")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qacp0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwatc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh4q5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boegq")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a75ea")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wlsws"]
size = Vector2(12, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_10rlg"]
radius = 91.0055

[node name="fighter" type="CharacterBody2D"]
motion_mode = 1
platform_on_leave = 2
platform_wall_layers = 255
script = ExtResource("1_um4s1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qacp0")
animation = &"attack"
autoplay = "idle"
frame = 2
frame_progress = 1.0

[node name="CollisionBody" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_wlsws")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionFIndEnemy" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_10rlg")

[node name="Area2D2ForAttack" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("3_0c1hw")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D2ForAttack"]
position = Vector2(0, -10)
polygon = PackedVector2Array(-10, 3, -10, 1, -6, -10, 6, -14, 8, -14, 8, 3)
disabled = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
